@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n geotrek_tags %}
 <h3>{% trans "Infrastructure" %}</h3>
 <table class="table">
     {% if modelname != "infrastructure" %}
@@ -6,9 +6,10 @@
         <th>{% trans "Infrastructures" %}</th>
         <td>
             {% if perms.infrastructure.add_infrastructure %}
-            <p class="autohide"><a href="{% url 'infrastructure:infrastructure_add' %}" class="btn btn-mini btn-success">
-                <i class="icon-plus icon-white"></i> {% trans "Add a new infrastructure" %}</a>
-            </p>
+                {% is_topology_model model as is_topology_model %}
+                <p class="autohide"><a href="{% url 'infrastructure:infrastructure_add' %}{% if is_topology_model %}?topology={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
+                    <i class="icon-plus icon-white"></i> {% trans "Add a new infrastructure" %}</a>
+                </p>
             {% endif %}
             {% for i in object.infrastructures %}
                 {% if forloop.first %}<ul>{% endif %}
