@@ -1,4 +1,6 @@
-{% load i18n %}
+{% load i18n geotrek_tags %}
+
+{% is_topology_model model as is_topology_model %}
 
 <h3>{% trans "Land" %}</h3>
 <table class="table">
@@ -7,7 +9,7 @@
         <th>{% trans "Land edges" %}</th>
         <td>
             {% if perms.land.add_landedge %}
-            <p class="autohide"><a href="{% url 'land:landedge_add' %}" class="btn btn-mini btn-success">
+            <p class="autohide"><a href="{% url 'land:landedge_add' %}{% if is_topology_model %}?topology={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
                 <i class="icon-plus icon-white"></i> {% trans "Add land edge" %}</a>
             </p>
             {% endif %}
@@ -21,7 +23,7 @@
         <th>{% trans "Physical edges" %}</th>
         <td>
             {% if perms.land.add_physicaledge %}
-            <p class="autohide"><a href="{% url 'land:physicaledge_add' %}" class="btn btn-mini btn-success">
+            <p class="autohide"><a href="{% url 'land:physicaledge_add' %}{% if is_topology_model %}?topology={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
                 <i class="icon-plus icon-white"></i> {% trans "Add physical edge" %}</a>
             </p>
             {% endif %}
@@ -35,7 +37,7 @@
         <th>{% trans "Competence edges" %}</th>
         <td>
             {% if perms.land.add_competenceedge %}
-            <p class="autohide"><a href="{% url 'land:competenceedge_add' %}" class="btn btn-mini btn-success">
+            <p class="autohide"><a href="{% url 'land:competenceedge_add' %}{% if is_topology_model %}?topology={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
                 <i class="icon-plus icon-white"></i> {% trans "Add competence edge" %}</a>
             </p>
             {% endif %}
@@ -49,7 +51,7 @@
         <th>{% trans "Work management edges" %}</th>
         <td>
             {% if perms.land.add_workmanagementedge %}
-            <p class="autohide"><a href="{% url 'land:workmanagementedge_add' %}" class="btn btn-mini btn-success">
+            <p class="autohide"><a href="{% url 'land:workmanagementedge_add' %}{% if is_topology_model %}?topology={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
                 <i class="icon-plus icon-white"></i> {% trans "Add work management edge" %}</a>
             </p>
             {% endif %}
@@ -63,7 +65,7 @@
         <th>{% trans "Signage management edges" %}</th>
         <td>
             {% if perms.land.add_signagemanagementedge %}
-            <p class="autohide"><a href="{% url 'land:signagemanagementedge_add' %}" class="btn btn-mini btn-success">
+            <p class="autohide"><a href="{% url 'land:signagemanagementedge_add' %}{% if is_topology_model %}?topology={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
                 <i class="icon-plus icon-white"></i> {% trans "Add signage management edge" %}</a>
             </p>
             {% endif %}
