@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n geotrek_tags %}
 
 {% if modelname != "intervention" %}
 
@@ -7,8 +7,9 @@
     <tr>
         <th>{% trans "Interventions" %}</th>
         <td>
+            {% is_topology_model model as is_topology_model %}
             {% if perms.maintenance.add_intervention %}
-            <p><a href="{% url 'maintenance:intervention_add' %}{% if modelname == "infrastructure" or modelname == "signage" %}?infrastructure={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
+            <p class="autohide"><a href="{% url 'maintenance:intervention_add' %}{% if modelname == "infrastructure" or modelname == "signage" %}?infrastructure={{ object.pk}}{% elif is_topology_model %}?topology={{ object.pk}}{% endif %}" class="btn btn-mini btn-success">
                 <i class="icon-plus icon-white"></i> {% trans "Add intervention" %}</a>
             </p>
             {% endif %}
